Fixed closing time bug

--- a/perp_bt- numba.ipynb
+++ b/perp_bt- numba.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "5     1565.59      -3.56    4.438614  0.002829  "
       ]
      },
-     "execution_count": 159,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "0   0       NaN        NaN        NaN         NaN       NaN   1574.89  NaN"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -322,7 +322,7 @@
     "                output[last_trade, 2] = price\n",
     "                output[last_trade, 5] = pct_diff\n",
     "                output[last_trade, -1] = tsec   \n",
-    "                close_time_index[last_trade] = last_trade\n",
+    "                close_time_index[last_trade] = i\n",
     "                if trade_type == 1 or trade_type == 3:\n",
     "                    last_trade = i\n",
     "                    if trade_type == 1:\n",
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 276,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,6 +410,270 @@
     "rez.loc[rez['type']=='open_short','pnl'] = rez['open_price'] - rez['close_price']\n",
     "rez.loc[rez['type']=='open_long','pnl'] = -(rez['open_price'] - rez['close_price'])\n",
     "rez.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>position</th>\n",
+       "      <th>open_price</th>\n",
+       "      <th>close_price</th>\n",
+       "      <th>type</th>\n",
+       "      <th>open_pct_diff</th>\n",
+       "      <th>close_pct_diff</th>\n",
+       "      <th>open_tsecs</th>\n",
+       "      <th>close_tsecs</th>\n",
+       "      <th>open_time</th>\n",
+       "      <th>close_time</th>\n",
+       "      <th>pnl</th>\n",
+       "      <th>edge</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1574.890688</td>\n",
+       "      <td>1548.770199</td>\n",
+       "      <td>open_short</td>\n",
+       "      <td>0.002662</td>\n",
+       "      <td>-0.005247</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>2021-03-03 19:33:35</td>\n",
+       "      <td>2021-03-03 19:53:35</td>\n",
+       "      <td>26.120489</td>\n",
+       "      <td>4.180688</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1548.770199</td>\n",
+       "      <td>1553.645889</td>\n",
+       "      <td>open_long</td>\n",
+       "      <td>-0.005247</td>\n",
+       "      <td>-0.002116</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>2021-03-03 19:53:35</td>\n",
+       "      <td>2021-03-03 19:53:35</td>\n",
+       "      <td>4.875691</td>\n",
+       "      <td>8.169801</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1558.372660</td>\n",
+       "      <td>1552.232777</td>\n",
+       "      <td>open_short</td>\n",
+       "      <td>0.000920</td>\n",
+       "      <td>-0.003023</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>2021-03-03 19:53:35</td>\n",
+       "      <td>2021-03-03 19:53:50</td>\n",
+       "      <td>6.139883</td>\n",
+       "      <td>1.432660</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1556.908597</td>\n",
+       "      <td>1552.691524</td>\n",
+       "      <td>open_short</td>\n",
+       "      <td>0.000841</td>\n",
+       "      <td>-0.003081</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>2021-03-03 19:54:25</td>\n",
+       "      <td>2021-03-03 20:21:30</td>\n",
+       "      <td>4.217073</td>\n",
+       "      <td>1.308597</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1557.159490</td>\n",
+       "      <td>1543.006741</td>\n",
+       "      <td>open_short</td>\n",
+       "      <td>0.002143</td>\n",
+       "      <td>-0.002246</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>2021-03-03 20:23:15</td>\n",
+       "      <td>2021-03-03 21:06:20</td>\n",
+       "      <td>14.152748</td>\n",
+       "      <td>3.329490</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>298395</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2616.854734</td>\n",
+       "      <td>2618.332069</td>\n",
+       "      <td>open_long</td>\n",
+       "      <td>-0.005871</td>\n",
+       "      <td>-0.002122</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>2021-06-04 07:11:20</td>\n",
+       "      <td>2021-06-04 07:12:15</td>\n",
+       "      <td>1.477335</td>\n",
+       "      <td>15.455266</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>298423</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2601.617977</td>\n",
+       "      <td>2609.509607</td>\n",
+       "      <td>open_long</td>\n",
+       "      <td>-0.005939</td>\n",
+       "      <td>-0.001756</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>2021-06-04 07:16:15</td>\n",
+       "      <td>2021-06-04 07:17:55</td>\n",
+       "      <td>7.891630</td>\n",
+       "      <td>15.542023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>298445</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2613.592308</td>\n",
+       "      <td>2613.385716</td>\n",
+       "      <td>open_long</td>\n",
+       "      <td>-0.005331</td>\n",
+       "      <td>-0.001354</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2021-06-04 07:25:35</td>\n",
+       "      <td>2021-06-04 07:26:05</td>\n",
+       "      <td>-0.206591</td>\n",
+       "      <td>14.007692</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>298453</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2617.648961</td>\n",
+       "      <td>2617.905412</td>\n",
+       "      <td>open_short</td>\n",
+       "      <td>0.000275</td>\n",
+       "      <td>-0.002991</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2021-06-04 07:26:35</td>\n",
+       "      <td>2021-06-04 07:27:10</td>\n",
+       "      <td>-0.256451</td>\n",
+       "      <td>0.718961</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>298559</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2649.260851</td>\n",
+       "      <td>2663.963065</td>\n",
+       "      <td>open_long</td>\n",
+       "      <td>-0.005335</td>\n",
+       "      <td>-0.001420</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>2021-06-04 09:05:00</td>\n",
+       "      <td>2021-06-04 09:19:35</td>\n",
+       "      <td>14.702213</td>\n",
+       "      <td>14.209149</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>15670 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        position   open_price  close_price        type  open_pct_diff  \\\n",
+       "0            0.0  1574.890688  1548.770199  open_short       0.002662   \n",
+       "44           0.0  1548.770199  1553.645889   open_long      -0.005247   \n",
+       "46           0.0  1558.372660  1552.232777  open_short       0.000920   \n",
+       "53           0.0  1556.908597  1552.691524  open_short       0.000841   \n",
+       "104          0.0  1557.159490  1543.006741  open_short       0.002143   \n",
+       "...          ...          ...          ...         ...            ...   \n",
+       "298395       0.0  2616.854734  2618.332069   open_long      -0.005871   \n",
+       "298423       0.0  2601.617977  2609.509607   open_long      -0.005939   \n",
+       "298445       0.0  2613.592308  2613.385716   open_long      -0.005331   \n",
+       "298453       0.0  2617.648961  2617.905412  open_short       0.000275   \n",
+       "298559       0.0  2649.260851  2663.963065   open_long      -0.005335   \n",
+       "\n",
+       "        close_pct_diff  open_tsecs  close_tsecs           open_time  \\\n",
+       "0            -0.005247        35.0         35.0 2021-03-03 19:33:35   \n",
+       "44           -0.002116        35.0         35.0 2021-03-03 19:53:35   \n",
+       "46           -0.003023        35.0         50.0 2021-03-03 19:53:35   \n",
+       "53           -0.003081        25.0         30.0 2021-03-03 19:54:25   \n",
+       "104          -0.002246        15.0         20.0 2021-03-03 20:23:15   \n",
+       "...                ...         ...          ...                 ...   \n",
+       "298395       -0.002122        20.0         15.0 2021-06-04 07:11:20   \n",
+       "298423       -0.001756        15.0         55.0 2021-06-04 07:16:15   \n",
+       "298445       -0.001354        35.0          5.0 2021-06-04 07:25:35   \n",
+       "298453       -0.002991        35.0         10.0 2021-06-04 07:26:35   \n",
+       "298559       -0.001420         0.0         35.0 2021-06-04 09:05:00   \n",
+       "\n",
+       "                close_time        pnl       edge  \n",
+       "0      2021-03-03 19:53:35  26.120489   4.180688  \n",
+       "44     2021-03-03 19:53:35   4.875691   8.169801  \n",
+       "46     2021-03-03 19:53:50   6.139883   1.432660  \n",
+       "53     2021-03-03 20:21:30   4.217073   1.308597  \n",
+       "104    2021-03-03 21:06:20  14.152748   3.329490  \n",
+       "...                    ...        ...        ...  \n",
+       "298395 2021-06-04 07:12:15   1.477335  15.455266  \n",
+       "298423 2021-06-04 07:17:55   7.891630  15.542023  \n",
+       "298445 2021-06-04 07:26:05  -0.206591  14.007692  \n",
+       "298453 2021-06-04 07:27:10  -0.256451   0.718961  \n",
+       "298559 2021-06-04 09:19:35  14.702213  14.209149  \n",
+       "\n",
+       "[15670 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rez.sort_values(by='pnl')\n",
+    "rez"
    ]
   }
  ],
